// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pomodoro /> 1`] = `
<div
  className="controls"
>
  <button
    className="play btnIcon"
    onClick={[Function]}
  />
  <button
    className="pause btnIcon"
    onClick={[Function]}
  />
</div>
`;

exports[`<Pomodoro /> 2`] = `
<button
  className="play btnIcon"
  onClick={[Function]}
/>
`;
